Kuyruk Changelog
================

Here you can see the full list of changes between each Kuyruk release.

Version 0.23.0
--------------

Released on XX-XX-2013.

- Removed InvalidCall exception type. TypeError or AttributeError is raised
  instead.

Version 0.22.1
--------------

Released on 27-08-2013.

- Master uses os.wait() instead of polling workers every second.

Version 0.22.0
--------------

Released on 25-08-2013.

- Use forking again instead Popen after fixing import issue.
- Add "Quit Task" button to Manager interface.

Version 0.21.0
--------------

Released on 17-08-2013.

- Drop support for Python 2.6.
- Switch back to subprocess module from forking.

Version 0.20.3
--------------

Released on 10-08-2013.

- Use fork() directly instead of subprocess.Popen() when starting workers
  from master.

Version 0.20.2
--------------

Released on 03-08-2013.

First public preview release.